make sure container-entity wouldn't cause horizontal scrolling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ form {
 }
 
 .container-entity {
-    width: fit-content;
+    max-width: 100%;
 }
 
 .container-btm:after {
